Issue #1: Implement environment-specific CORS configuration
- Create application-dev.properties (permissive CORS: *)
- Create application-qa.properties (permissive CORS: *)
- Create application-prod.properties (strict whitelist + localhost)
- Update SecurityConfig.java to read cors.allowed.origins from config
- Remove Flyway dependency from pom.xml (Issue #32)
- Add JWT secret configuration with environment variable fallback

CORS Configuration:
- DEV/QA: Allow all origins (*) for easy testing
- PROD: Whitelist only quadframe.work domains + localhost for local dev

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>